update client audio player

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./css/audioplayer.css" />
     <!-- tab icon -->
     <link rel="icon" href="logo.jpg">
     <title>Moody Music</title>
@@ -95,7 +95,11 @@
 
         <!-- MAIN -->
         <div class="app mb-5" id="main"><hr>
-            <h2>This is Main Page</h2>
+            <div id="wrapper">
+                <audio preload="auto" controls>
+                            <source src="http://cdn-preview-1.deezer.com/stream/c-1025bdbc62aee2b32bf1a377bee6c9a6-4.mp3">
+                </audio>
+            </div>
         </div>
 
     </div>
@@ -108,7 +112,12 @@
 
     <!-- CDN JQUERY -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-
+    <script src="./scripts/audioplayer.js"></script>
+    <script>
+        $(function() {
+            $('audio').audioPlayer();
+        });
+    </script>
     <!-- FETCH Scripts -->
     <script src="./scripts/functions.js"></script>
     <script src="./scripts/docReady.js"></script>
