finish working well

--- a/client/index.html
+++ b/client/index.html
@@ -108,7 +108,7 @@
 
         <!-- MAIN -->
         <div class="app mb-5" id="main"><hr>
-
+            <iframe id="giphy" src="" width="427" height="300" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
             <!-- Dropdown genre -->
             <form style="margin-left: 42%;">
                 <div class="form-row align-items-center">
